# Orbit

./: .gitignore  Orbit.spec  README.md  main.py  pyproject.toml
Backend/: config.py  devto_fetcher.py  digest_generator.py  emailer.py  gh_trending_fetcher.py  github_fetcher.py  hf_fetcher.py  reddit_fetcher.py  scheduler.py
Backend/sources/: __init__.py  base.py  devto_source.py  gh_trending_source.py  github_source.py  hf_source.py  reddit_source.py
Frontend/: GUI.py
Frontend/Data/: config.json
tests/: conftest.py  test_config.py  test_devto_fetcher.py  test_digest_generator.py  test_emailer.py  test_hf_fetcher.py  test_reddit_fetcher.py
