[project]
name = "github-agent-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "groq>=1.1.2",
    "pygithub>=2.9.0",
    "pyqt6>=6.11.0",
    "python-dotenv>=1.2.2",
    "schedule>=1.2.2",
]
